k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-info-service
  namespace: development
spec:
  type: LoadBalancer
  selector:
    app: pod-info
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: explore-california-service
  namespace: development
spec:
  type: LoadBalancer
  selector:
    app: explorecalifornia.com
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8085
