k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: explorecalifornia
  namespace: development
spec:
  rules:
    - host: explorecalifornia.com
      http:
        paths:
          - backend:
              service:
                name: explore-california-service
                port:
                  number: 8085
            path: /
            pathType: Exact
status:
  loadBalancer: {}
